--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="description" content="">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">		
-		<link rel="stylesheet" href="styles/movie-styles.css">
+		<link rel="stylesheet" href="movie.css">
 		<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">	
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>		
 		<link href='http://fonts.googleapis.com/css?family=Neuton:300,400,700' rel='stylesheet' type='text/css'>
@@ -14,7 +14,18 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>			
 	</head>
 	<body>
-
-	
+	<div id="test-div">
+	<header>
+<h1>On Regret</h1>
+<h2>Sad Man</h2>
+</header>
+	<div class="intro">
+	<p class="par2">Tuesday night was unexpected, and though brief, wonderful. The chats, too. Hearing you laugh again set my heart right. I had hoped, but not expected it to maintain. I’ll take the fleeting moments of how things used to be and the hope that they can return regularly again over no fleeting moments at all. It also came on an interesting day. We’ve talked about being okay by ourselves. We’ve talked about looking forward. And since our lunch on Friday, after the misery of that morning and the preceding week, <a href="#">I took to the idea with a level of motivation</a> that was strange and new to me in its intensity. I’ve never felt such perspective, patience, and calm. Every day after we broke up had been agonizing — I wanted us both to commit to certain personal changes, clarify expectations, agree to new life strategies, ways of healing, but stay together, like we had tried before. I suppose that’s the most important part. Like we had tried before. I think, though, that this is the way. Demonstrable progress instead of trusting in potential. After our first break up, I said “I wish you could see the person I am in a couple of months. I wish you could glimpse ahead.” That remains true. But maybe this was a necessary part of the process of those couple of months. Tuesday, after sketching out a year-long plan for personal transformation, with goals to reach every day, week, and month, I came to peace with that idea. I accepted myself for the first time in recent memory. I accepted the work that’s ahead of me. I’m too old to be living in a certain way. I’m excited about the process. And I’m excited that you still get to witness it and to be a part of it.</p>
+</div>
+<div class="feature">
+<p class="par1">I’ve lacked patience for the past couple of years, after priding myself on being measured growing up. I’ve sought cheap, easy escapes, and became dependent on them, the drinking being the most obvious example. But another example is what happened with us, and why we had so many big fights regarding the literal, meaningless process of filing for divorce. <a href="index.html">Drinking brings temporary relief</a> or happiness, but it does nothing but hinder long-term contentment and comfort. These gestures of commitment may feel nice immediately, but what are they really? Just gestures, all contrived, with no meaning, and pushing for them does nothing but sabotage the exact idea they’re supposed to represent. Comfort takes time. Feeling okay takes time. It takes work. Commitment takes time. Commitment and feeling secure takes work. <a href="#">There aren’t shortcuts for either</a>. There’s no way to have a one-year anniversary after dating for three months. Combine drinking with insecurity and a need to feel a level of commitment that can only happen through the passage of time? You end up coming off as irrational, illogical, and more than anything, unfair. Two weeks sober and these things have never been so clear.</p>
+</div>
+<p>Heather, I don’t want to hide the desire that I still want us to try again. Without voicing it occasionally and giving you the opportunity to either encourage or discourage the idea, it distracts me, festers, creates a potential point of conflict. The desire, though, is nowhere near as immediate and needs-to-be-settled-RIGHT-NOW as before. I know you’ll also tell me for sure that it’s not and will never be possible if you ever get to that point, so that I can switch gears even further. Until then, the hope is latent, but existing. I love you and I’m working on the underlying issues. I now have no desire to cope with stress through alcohol, and have ways of managing temptation — going to an AA meeting would frighten any thirst out of me. I have a life plan together. I’m excited about my personal future. I see now, with pain, that you were as committed to me as much as I was to you and things would have been amazing for so long had I just let them be. They still can be. I know it. And I still can’t wait for you to see the person I am in a couple of months and beyond. I’m excited to see that person too. It’ll be June before you get you get your medicine back. I’ll be two months sober. If Tuesday night was any indication, no matter our status, I still think we have a bright, fun summer to look forward to.</p>
+</div>
 	</body>
 </html>
